Fixed: anchors dont jump on transition anymore

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1185,20 +1185,20 @@ Keyframes for frontpage
       margin-bottom: 50px;
       a {
         color: white;
+        background-color: $purpleColor;
         text-decoration: none;
         font-size: 24px;
-        padding: 30px 0px;
+        width: calc(100% + 50px);
+        position: relative;
+        left: -25px;
+        display: inline-block;
+        padding: 30px 25px;
       }
     }
   }
   .activeAnchor {
     color: $purpleColor;
     background-color: white;
-    width: calc(100% + 50px);
-    position: relative;
-    left: -25px;
-    display: inline-block;
-    padding: 30px 25px;
     transition: background-color 0.7s ease;
   }
   main {
